# AutobahnCpp

./: CMakeLists.txt
autobahn/: autobahn.hpp  wamp_invocation.hpp  wamp_invocation.ipp  wamp_rawsocket_transport.ipp  wamp_session.hpp  wamp_session.ipp  wamp_tcp_client.hpp
examples/: CMakeLists.txt  CServiceDiscoveryManager.h  backplane.cpp  callee.cpp  caller.cpp  parameters.cpp  parameters.hpp  proxyCallee.cpp  proxyCaller.cpp
examples/acs/: CBackplane.cpp  CBackplane.hpp  CDomainDiscoveryManager.cpp  CDomainDiscoveryManager.hpp  CDomainInfo.cpp  CDomainInfo.hpp  CInterfaceChangeNotifier.cpp  CInterfaceChangeNotifier.hpp  CServiceDiscoveryManager.cpp  CServiceDiscoveryManager.hpp  getInterfaceAddresses.cpp  getInterfaceAddresses.hpp
